ordering/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordering-api-service
spec:
  selector:
    app: ordering-api
  ports:
    - port: 8070
      targetPort: 8080
  type: NodePort
